--- a/src/pages/movie/movie-detail/movie-detail.component.html
+++ b/src/pages/movie/movie-detail/movie-detail.component.html
@@ -1,9 +1,9 @@
 @if (movie) {
 <div class="movie-detail-container">
   <mat-card class="movie-card">
-    <img mat-card-image [src]="movie.imageUrl" [alt]="movie.title" />
+    <img mat-card-image [src]="movie.imageUrl" />
     <mat-card-content>
-      <h1>{{ movie.title }}</h1>
+      <h1>{{ movie.name }}</h1>
       <p class="genre">{{ genres }}</p>
       <p class="description">{{ movie.description }}</p>
     </mat-card-content>
