--- a/src/shared/navbar/navbar/navbar.component.html
+++ b/src/shared/navbar/navbar/navbar.component.html
@@ -26,7 +26,7 @@
     <!-- Role-based Navigation -->
     <span>
       @if (isLoggedIn() && isAdmin()) {
-      <a mat-button routerLink="/admin" routerLinkActive="active">Admin</a>
+      <a mat-button routerLink="/movies" routerLinkActive="active">Admin</a>
       } @if (isLoggedIn() && isUser()) {
       <a mat-button routerLink="/customer" routerLinkActive="active">Customer</a>
       }
